Teacher controler, form and index

--- a/school-management/Views/Shared/_Layout.cshtml
+++ b/school-management/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Estudiantes", "Index", "Students")</li>
+                    <li>@Html.ActionLink("Maestros", "Index", "Teachers")</li>
                 </ul>
             </div>
         </div>
