--- a/school-management/Views/Students/Edit.cshtml
+++ b/school-management/Views/Students/Edit.cshtml
@@ -48,7 +48,7 @@
         </div>
     </div>
     <div class="form-group">
-        <label class="control-label col-md-2">Correo electrónico</label>
+        <label class="control-label col-md-2">Estado</label>
         <div class="col-md-10">
             <select class="form-select" aria-label="Default select example" name="status">
                 @if (status.Equals("Active"))
