--- a/school-management/Views/Teachers/Details.cshtml
+++ b/school-management/Views/Teachers/Details.cshtml
@@ -1,17 +1,26 @@
 ﻿@model school_management.Models.Teachers
+@using school_management.Models 
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Detalles";
+    Users user = (Users)ViewBag.user;
 }
 
-<h2>Details</h2>
+<h2>Detalles de maestro</h2>
 
 <div>
-    <h4>Teachers</h4>
+    @Html.ActionLink("Editar", "Edit", new { id = Model.id }, new { @class = "btn btn-primary w" })
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.teachername)
+            Código
+        </dt>
+
+        <dd>
+            @user.username
+        </dd>
+        <dt>
+            Nombre
         </dt>
 
         <dd>
@@ -19,16 +28,31 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.idUser)
+            Correo electrónico
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.idUser)
+            @user.mail
+        </dd>
+
+        <dt>
+            Estado
+        </dt>
+
+        <dd>
+            @if (user.userstatus.Equals("Active"))
+            {
+
+                <p>Activo</p>
+
+            }
+            else
+            {
+
+                <p>Inactivo</p>
+
+            }
         </dd>
 
     </dl>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
