--- a/school-management/Views/Teachers/Edit.cshtml
+++ b/school-management/Views/Teachers/Edit.cshtml
@@ -1,49 +1,76 @@
 ﻿@model school_management.Models.Teachers
 
+
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Editar";
+    string mail = (string)ViewBag.mail;
+    string status = (string)ViewBag.status;
 }
 
-<h2>Edit</h2>
+<h2>Editar maestro</h2>
 
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
-        <h4>Teachers</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.id)
+<div class="form-horizontal">
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.HiddenFor(model => model.id)
+    @Html.HiddenFor(model => model.idUser)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.teachername, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.teachername, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.teachername, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.idUser, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.idUser, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.idUser, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
+    <div class="form-group">
+        <label class="control-label col-md-2">Nombre</label>
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.teachername, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.teachername, "", new { @class = "text-danger" })
         </div>
     </div>
-}
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
+    <div class="form-group">
+        <label class="control-label col-md-2">Correo electrónico</label>
+        <div class="col-md-10">
+            <input type="text" name="mail" value="@mail" class="form-control" />
+            @if (ViewBag.mailValidation != null)
+            {
+                <span class="field-validation-error text-danger">
+                    <span id="mail">@ViewBag.mailValidation</span>
+                </span>
+            }
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label class="control-label col-md-2">Estado</label>
+        <div class="col-md-10">
+            <select class="form-select" aria-label="Default select example" name="status">
+                @if (status != null && status.Equals("Active"))
+                {
+
+                    <option value="Active" selected>Activo</option>
+                    <option value="Inactive">Inactivo</option>
+                }
+                else
+                {
+
+                    <option value="Active">Activo</option>
+                    <option value="Inactive" selected>Inactivo</option>
+                }
+            </select>
+        </div>
+    </div>
+
+    <div class="form-group mt-2">
+        <div class="col-md-offset-2 col-lg-1 col-md-2 col-sm-2 col-xs-3">
+            <input type="submit" value="Registrar" class="btn btn-primary w" />
+        </div>
+        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-2">
+            @Html.ActionLink("Cancelar", "Index", "Teachers", new { @class = "btn btn-danger" })
+        </div>
+    </div>
 </div>
+}
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
