--- a/school-management/Views/Students/Edit.cshtml
+++ b/school-management/Views/Students/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model school_management.Models.Students
 
 @{
-    ViewBag.Title = "Editar";
+    ViewBag.Title = "Estudiantes";
     string mail = (string)ViewBag.mail;
     string status = (string)ViewBag.status;
 }
