--- a/school-management/Views/Teachers/Create.cshtml
+++ b/school-management/Views/Teachers/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model school_management.Models.Teachers
 
 @{
-    ViewBag.Title = "Registro";
+    ViewBag.Title = "Maestros";
 }
 
 <h2>Registro de maestros</h2>
