--- a/school-management/Views/Teachers/Details.cshtml
+++ b/school-management/Views/Teachers/Details.cshtml
@@ -2,7 +2,7 @@
 @using school_management.Models 
 
 @{
-    ViewBag.Title = "Detalles";
+    ViewBag.Title = "Maestros";
     Users user = (Users)ViewBag.user;
 }
 
