--- a/school-management/Views/Courses/Edit.cshtml
+++ b/school-management/Views/Courses/Edit.cshtml
@@ -1,13 +1,10 @@
-﻿@model school_management.Models.Teachers
-
+﻿@model school_management.Models.Courses
 
 @{
-    ViewBag.Title = "Maestros";
-    string mail = (string)ViewBag.mail;
-    string status = (string)ViewBag.status;
+    ViewBag.Title = "Editar";
 }
 
-<h2>Editar maestro</h2>
+<h2>Editar curso</h2>
 
 
 @using (Html.BeginForm())
@@ -18,26 +15,22 @@
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.id)
-    @Html.HiddenFor(model => model.idUser)
 
     <div class="form-group">
         <label class="control-label col-md-2">Nombre</label>
+
         <div class="col-md-10">
-            @Html.EditorFor(model => model.teachername, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.teachername, "", new { @class = "text-danger" })
+            @Html.EditorFor(model => model.coursename, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.coursename, "", new { @class = "text-danger" })
         </div>
     </div>
 
+
     <div class="form-group">
-        <label class="control-label col-md-2">Correo electrónico</label>
+        <label class="control-label col-md-2">Año de curso</label>
         <div class="col-md-10">
-            <input type="text" name="mail" value="@mail" class="form-control" />
-            @if (ViewBag.mailValidation != null)
-            {
-                <span class="field-validation-error text-danger">
-                    <span id="mail">@ViewBag.mailValidation</span>
-                </span>
-            }
+            @Html.EditorFor(model => model.courseyear, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.courseyear, "", new { @class = "text-danger" })
         </div>
     </div>
 
@@ -45,7 +38,7 @@
         <label class="control-label col-md-2">Estado</label>
         <div class="col-md-10">
             <select class="form-select" aria-label="Default select example" name="status">
-                @if (status != null && status.Equals("Active"))
+                @if (Model.coursestatus.Equals("Active"))
                 {
 
                     <option value="Active" selected>Activo</option>
@@ -66,7 +59,7 @@
             <input type="submit" value="Registrar" class="btn btn-primary w" />
         </div>
         <div class="col-lg-1 col-md-1 col-sm-2 col-xs-2">
-            @Html.ActionLink("Cancelar", "Index", "Teachers", new { @class = "btn btn-danger" })
+            @Html.ActionLink("Cancelar", "Index", "Courses", new { @class = "btn btn-danger" })
         </div>
     </div>
 </div>
