--- a/school-management/Views/Shared/_Layout.cshtml
+++ b/school-management/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Estudiantes", "Index", "Students")</li>
                     <li>@Html.ActionLink("Maestros", "Index", "Teachers")</li>
+                    <li>@Html.ActionLink("Cursos", "Index", "Courses")</li>
                 </ul>
             </div>
         </div>
