--- a/school-management/Views/Students/Create.cshtml
+++ b/school-management/Views/Students/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model school_management.Models.Students
 
 @{
-    ViewBag.Title = "Registro de estudiantes";
+    ViewBag.Title = "Estudiantes";
 }
 
 <h2>Registro de estudiantes</h2>
