--- a/school-management/Views/Students/Details.cshtml
+++ b/school-management/Views/Students/Details.cshtml
@@ -2,7 +2,7 @@
 @using school_management.Models
 
 @{
-    ViewBag.Title = "Detalles";
+    ViewBag.Title = "Estudiantes";
     Users user = (Users)ViewBag.user;
 }
 
