--- a/school-management/Views/TeachersEnrolleds/Details.cshtml
+++ b/school-management/Views/TeachersEnrolleds/Details.cshtml
@@ -42,3 +42,5 @@
 
     </dl>
 </div>
+<br />
+@Html.Action("IndexByCourseAndTeacher", "Inscriptions", new { idCourse = Model.idCourse, idTeacher = Model.idTeacher })
