--- a/school-management/Views/Home/Index.cshtml
+++ b/school-management/Views/Home/Index.cshtml
@@ -1,31 +1,95 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Dashboard";
 }
+<script>
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+            var studentsPerYear =
+                {
+                    labels: [@Html.Raw(ViewBag.courseYearNames)],
+                    datasets: [{
+                        label: 'Cantidad de estudiantes',
+                        backgroundColor: [
+                            "#F20544",
+                            "#F22283",
+                            "#F21DCF",
+                            "#4A1FA6",
+                            "#04BF9D",
+                            "#aad2ed",
+                            "#9966FF",
+                            "#99e5e5",
+                            "#f7bd83",
+                        ],
+                        borderWidth: 2,
+                        data: [@Html.Raw(ViewBag.studentByCourseYear)]
+                    }]
+                };
+            var inscriptionsPerCourse =
+                {
+                    labels: [@Html.Raw(ViewBag.courseName)],
+                    datasets: [{
+                        label: 'Cantidad de inscripciones',
+                        backgroundColor: [
+                            "#F20544",
+                            "#F22283",
+                            "#F21DCF",
+                            "#4A1FA6",
+                            "#04BF9D",
+                            "#aad2ed",
+                            "#9966FF",
+                            "#99e5e5",
+                            "#f7bd83",
+                        ],
+                        borderWidth: 2,
+                        data: [@Html.Raw(ViewBag.inscriptionsByCourse)]
+                    }]
+                };
+
+            window.onload = function () {
+                var ctx1 = document.getElementById("studentsPerYear").getContext("2d");
+                window.myBar = new Chart(ctx1,
+                    {
+                        type: 'bar',
+                        data: studentsPerYear,
+                        options:
+                            {
+                                title:
+                                {
+                                    display: true,
+                                    text: "Estudiantes inscritos por año"
+                                },
+                                responsive: true,
+                                maintainAspectRatio: true
+                            }
+                    });
+
+                var ctx2 = document.getElementById("inscriptionsPerCourse").getContext("2d");
+                window.myBar = new Chart(ctx2,
+                    {
+                        type: 'polarArea',
+                        data: inscriptionsPerCourse,
+                        options:
+                        {
+                            title:
+                            {
+                                display: true,
+                                text: "Inscripciones por curso"
+                            },
+                            responsive: true,
+                            maintainAspectRatio: true
+                        }
+                    });
+            }
+</script>
+<h1>Dashboard de administración de escuela</h1>
+<hr />
 
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+    <div class="col-md-6">
+
+        <canvas id="studentsPerYear"></canvas>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    <div class="col-md-6">
+
+        <canvas id="inscriptionsPerCourse"></canvas>
     </div>
 </div>
