--- a/school-management/Views/Inscriptions/IndexByStudent.cshtml
+++ b/school-management/Views/Inscriptions/IndexByStudent.cshtml
@@ -7,9 +7,13 @@
 
 <h2>Cursos inscritos</h2>
 
+@if ((int)ViewBag.coursesavailables > 0) 
+{
 <p>
     @Html.ActionLink("Nueva inscripcion", "CreateByStudent", "Inscriptions",new { id = ViewBag.idStudent }, new { @class="btn btn-primary"})
 </p>
+}
+
 <table class="table">
     <tr>
         <th>
